# california

./: .gitignore  AUTHORS  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  THANKS  autogen.sh  california.doap  configure.ac
data/: Makefile.am  california.appdata.xml  california.appdata.xml.in  california.desktop.in.in  org.yorba.california.gschema.xml
help/: Makefile.am
help/C/: _delete_me_owncloud_link.txt  cal-add-calendar.page  cal-add-google-calendar.page  cal-add-ics-calendar.page  cal-change-view.page  cal-event-edit.page  cal-event-quick-add.page  cal-event-recurring.page  cal-event-remove.page  cal-hide-a-calendar.page  cal-open-calendar-list.xml  cal-quickstart.page  cal-remove-calendar.page  cal-remove-calendar.page.stub  cal-rename-calendar.page  cal-shortcut-keys.page  index.page
help/ca/: ca.po
help/cs/: cs.po
help/de/: de.po
help/es/: es.po
src/: Makefile.am  california-resources.xml  main.vala
src/activator/: activator-instance-list.vala  activator-instance.vala  activator-window.vala  activator.vala
src/activator/caldav/: caldav-subscribe.vala  (+1 more)
src/application/: california-application.vala  california-commandline.vala  california-main-window.vala  california-resource.vala  california-settings.vala  main.vala  resource.vala
src/backing/: backing-activator.vala  backing-caldav-subscribable.vala  backing-calendar-source-subscription.vala  backing-calendar-source.vala  backing-calendar-subscription-manager.vala  backing-error.vala  backing-manager.vala  backing-source.vala  backing-store.vala  backing-webcal-subscribable.vala  backing.vala
src/base/: base-init-guard.vala  base-object.vala  base-properties.vala  base-unit.vala
src/calendar/: calendar-date-ordering.vala  calendar-date-span.vala  calendar-date.vala  calendar-day-of-month.vala  calendar-day-of-week.vala  calendar-dbus.vala  calendar-duration.vala  calendar-error.vala  calendar-exact-time-span.vala  calendar-exact-time.vala  calendar-first-of-week.vala  calendar-month-of-year.vala  calendar-month-span.vala  calendar-month.vala  calendar-olson-zone.vala  calendar-span.vala  calendar-system.vala  calendar-timezone.vala  calendar-unit-span.vala  calendar-unit.vala  calendar-wall-time.vala  calendar-week-span.vala  calendar-week.vala  calendar-year-span.vala  calendar-year.vala  calendar.vala
src/collection/: collection-iterable.vala  collection-lookahead-stack.vala  collection-simple-iterable.vala  collection-simple-iterator.vala  collection.vala
src/component/: component-date-time.vala  component-details-parser.vala  component-error.vala  component-event.vala  component-icalendar.vala  component-instance.vala  component-person.vala  component-recurrence-rule.vala  component-uid.vala  component-vtype.vala  component.vala
src/components/: main-window.vala  month-grid-cell.vala  month-grid.vala
src/event-editor/: event-editor-attendees-card.vala  event-editor-date-time-card.vala  event-editor-date-time-widget.vala  event-editor-deck.vala  event-editor-main-card.vala  event-editor-recurring-card.vala  event-editor.vala
src/host/: host-activator-list.vala  host-attendees-editor.vala  host-calendar-list-item.vala  host-calendar-popup.vala  host-color-chooser-popup.vala  host-create-event.vala  host-create-update-event.vala  host-create-update-recurring.vala  host-date-time-widget.vala  host-event-time-settings.vala  host-import-calendar.vala  host-interaction.vala  host-main-window-title.vala  host-main-window.vala  host-modal-window.vala  host-popup.vala  host-preferences.vala  host-quick-create-event.vala  host-show-event.vala  host.vala
src/manager/: manager-calendar-list-item.vala  manager-calendar-list.vala  manager-remove-calendar.vala  manager-window.vala  manager.vala
src/rc/: activator-google-login-pane.ui  activator-list.ui  app-menu.interface  attendees-editor.ui  calendar-import.ui  calendar-manager-list-item.ui  calendar-manager-list.ui  create-event.ui  create-update-event.ui  create-update-recurring.ui  date-time-widget.ui  event-editor-attendees-card.ui  event-editor-date-time-card.ui  event-editor-date-time-widget.ui  event-editor-main-card.ui  event-editor-recurring-card.ui  event-time-settings.ui  generic-subscribe.ui  google-authenticating.ui  google-calendar-list.ui  google-login.ui  host-calendar-list-item.ui  host-main-window-title.ui  host-show-event.ui  main-window-title.ui  manager-calendar-list-item.ui  preferences.ui  quick-create-event.ui  remove-calendar.ui  show-event.ui  view-agenda-date-row.ui  view-agenda-event-row.ui  view-agenda-load-more-row.ui  webcal-subscribe.ui  window-menu.interface
src/tests/: tests-calendar-date.vala  tests-calendar-exact-time-span.vala  tests-calendar-exact-time.vala  tests-calendar-month-of-year.vala  tests-calendar-month-span.vala  tests-calendar-wall-time.vala  tests-iterable.vala  tests-quick-add-recurring.vala  tests-quick-add.vala  tests-string.vala  tests.vala
src/toolkit/: toolkit-button-connector.vala  toolkit-button-event.vala  toolkit-calendar-popup.vala  toolkit-card.vala  toolkit-combo-box-text-model.vala  toolkit-deck-popover.vala  toolkit-deck-window.vala  toolkit-deck.vala  toolkit-editable-label.vala  toolkit-entry-clear-text-connector.vala  toolkit-entry-filter-connector.vala  toolkit-event-connector.vala  toolkit-listbox-model.vala  toolkit-motion-connector.vala  toolkit-motion-event.vala  toolkit-mutable-widget.vala  toolkit-popup.vala  toolkit-region-manager.vala  toolkit-rotating-button-box.vala  toolkit-stack-model.vala  toolkit.vala
src/unit-test/: unit-test-harness.vala
src/util/: util-deck.vala  util-email.vala  util-gfx.vala  util-interfaces.vala  util-listbox-model.vala  util-markup.vala  util-memory.vala  util-numeric.vala  util-scheduled.vala  util-simple-iterable.vala  util-simple-iterator.vala  util-string.vala  util-uri.vala  util.vala
src/view/: view-chronology-motion.vala  view-container.vala  view-controllable.vala  view-controller.vala  view-host-interface.vala  view-palette.vala  view.vala
src/views/: main-window.vala  month-grid-cell.vala  month-grid.vala  views.vala
(+113 files in other folders)
