AC_INIT([california], [0.1.0], [jim@yorba.org], [california])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS([config/config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([config])

AM_INIT_AUTOMAKE([dist-xz no-dist-gzip])
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_CC_C_O

AC_PATH_PROG(VALAC, valac, valac)
AC_SUBST(VALAC)

AC_PATH_PROG(GLIB_COMPILE_RESOURCES, glib-compile-resources)

IT_PROG_INTLTOOL([0.35.0])
GETTEXT_PACKAGE=california
AC_SUBST(GETTEXT_PACKAGE)

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

GLIB_REQUIRED=2.28.0
GTK_REQUIRED=3.10.0
GEE_REQUIRED=0.10.5
ECAL_REQUIRED=3.8.5

PKG_CHECK_MODULES(CALIFORNIA, \
	glib-2.0 >= $GLIB_REQUIRED \
	gobject-2.0 >= $GLIB_REQUIRED \
	gtk+-3.0 >= $GTK_REQUIRED \
	gee-0.8 >= $GEE_REQUIRED \
	libecal-1.2 >= $ECAL_REQUIRED
)
AC_SUBST(CALIFORNIA_CFLAGS)
AC_SUBST(CALIFORNIA_LIBS)

AC_CONFIG_FILES([
	Makefile
	src/Makefile
	po/Makefile.in])

AC_OUTPUT
