@YELP_HELP_RULES@

NULL =

HELP_ID = california

HELP_MEDIA = \
	media/california-screenshot.png \
	media/x-office-calendar.png \
	$(NULL)

HELP_FILES = \
	cal-add-calendar.page \
	cal-change-view.page \
	cal-event-edit.page \
	cal-event-quick-add.page \
	cal-event-remove.page \
	cal-hide-a-calendar.page \
	cal-open-calendar-list.xml \
	cal-quickstart.page \
	cal-remove-calendar.page.stub \
	cal-rename-calendar.page \
	cal-shortcut-keys.page \
	index.page \
	legal.xml \
	$(NULL)

HELP_LINGUAS = ca cs de es

GITIGNOREFILES = \
	Makefile \
	Makefile.in \
	$(NULL)

-include $(top_srcdir)/git.mk

